=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

=over 3

=item 1.18_01-dev

cure core dump with 5.005_03-threads

ensure mod_perl/x.xx component is not added before Apache/x.x.x

fix $ENV{MOD_PERL} value

=item 1.18 - January 27, 1999

if -DAPACHE_PERL5LIB is defined, feed the paths to @INC at startup

prevent double mod_perl/x.xx in Server header under DSO
[Jan Wedekind <jan.wedekind@de.uu.net>]

Apache::Status HTML cosmetics + prefer Apache::Request over CGI.pm
[Andreas J. Koenig <andreas.koenig@anima.de>]

ensure Apache.pm is loaded (at least attempted) before checking $VERSION

do not undef subroutines when flushing Apache::PerlRun::handler
namespace unless subroutine lives in that namespace, i.e. not imported
(no undef happens unless `B' module is loaded)

untaint Apache::File->tmpfile (if $ENV{TMPDIR,TEMP} are used)

'make test' fixups:

 -for when other modules (e.g. auth, dirindex, type)
  come before mod_perl in the module list
 -exit graceful if LWP is still not installed
 -skip module.t unless mod_{include,access} are configured

loose @ISA 'DynaLoader' to avoid inheriting AutoLoader::AUTOLOAD

added $r->server->timeout method

skip tests that use xs/ap_ code if installed MMN is not equal to
target MMN, since Apache releases may break binary compat

Makefile.PL will look for --target=(\S+) in APACI_ARGS, if found use
instead of the default `httpd' for 'make test'

make sure ap_config_auto.h is picked up when PREP_HTTPD=1 (for
non-distribution modules that use Apache::src to build)

Fixed "broken" $VERSION's so CPAN won't be confused
[ Ask Bjoern Hansen <ask@netcetera.dk> ]

add some insurance so HTTP_* env variables should always be wiped

fixed $r->finfo bug (properly set PL_laststatval)

PerlRequire/PerlModule will not let the server start if there is an
error (bug introduced in 1.16_xx), thanks to Brian Moseley for the spot

5.005_54+usethreads port [Brian P Millett <bpm@ec-group.com>]
